FLY wire David/force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link Leads to Existing Account Records</description>
    <inlineHelpText>If the Account record exists enter it here to link your leads to the Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account)</relationshipLabel>
    <relationshipName>Leads_Account</relationshipName>
    <type>Lookup</type>
</CustomField>