FLY wire David/force-app/main/default/objects/Lead/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>If the account lookup has been filled in with an account, this field will populate with that account&apos;s owner.</description>
    <formula>Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Account__r.Owner.LastName</formula>
    <inlineHelpText>If the account lookup has been filled in with an account, this field will populate with that account&apos;s owner.</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>