FLY wire David/force-app/main/default/objects/Lead/fields/B2B_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>B2B_Round_Robin__c</fullName>
    <description>Assigns B2B Round Robin ID to Lead Record during upload.</description>
    <formula>MOD(VALUE(Lead_Number__c),2)+5</formula>
    <inlineHelpText>Assigns B2B Round Robin ID to Lead Record during upload.</inlineHelpText>
    <label>B2B Round Robin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>