FLY wire David/force-app/main/default/objects/Lead/fields/BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>BDR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Development Owner Name</description>
    <inlineHelpText>Business Development Owner Name</inlineHelpText>
    <label>BDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>