FLY wire David/force-app/main/default/objects/Lead/fields/Buyer_Intent__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Intent__c</fullName>
    <description>Used by marketing on website demo request forms to request the buyers intent. SAL-4653</description>
    <label>Buyer Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Buyer_Intent</valueSetName>
    </valueSet>
</CustomField>