FLY wire David/force-app/main/default/objects/Lead/fields/Client_Services_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Services_Rep_Name__c</fullName>
    <description>For BDR form where the Client services team will get calls/emails about our service and they will fill out a form that will submit via pardot and sync to SFDC and assign to BDR queue.   CS will enter their name on the form and it will sync to this field so if BDRs have a question about the lead they can contact that person to ask for more context.</description>
    <label>OBSClient Services Rep Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>