FLY wire David/force-app/main/default/objects/Lead/fields/Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone__c</fullName>
    <description>Phone number for the Company or Company HQ&apos;s. Used for Zoominfo integration and requested by B2B.</description>
    <inlineHelpText>Phone number for the Company or Company HQ&apos;s</inlineHelpText>
    <label>Company Phone</label>
    <type>Phone</type>
</CustomField>