FLY wire David/force-app/main/default/objects/Lead/fields/Convert__c.field-meta.xml
<CustomField>
    <fullName>Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for automation flow. Check if lead needs to be converted and complete the Account Lookup field.</inlineHelpText>
    <label>Convert?</label>
    <type>Checkbox</type>
</CustomField>