FLY wire David/force-app/main/default/objects/Lead/fields/Demographic_Score__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Score__c</fullName>
    <description>Each vertical has identified their specific ideal customer profile - this field is used to calculate a score based on how well a lead/contact fits the identified target audience based on their personal data.This fieldis based on a +50 point model - if a lead/contact meets all criteria for identified ICP, they will receive a perfect score of +50. SAL-4653</description>
    <label>Demographic Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>