FLY wire David/force-app/main/default/objects/Lead/fields/DHC_Global_ID__c.field-meta.xml
<CustomField>
    <fullName>DHC_Global_ID__c</fullName>
    <description>Definitive Healthcare Global ID. Used for DHC Delta Uploads.</description>
    <externalId>true</externalId>
    <inlineHelpText>Definitive Healthcare Global ID. Used for DHC Delta Uploads.</inlineHelpText>
    <label>DHC Global ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>