FLY wire David/force-app/main/default/objects/Lead/fields/Disqualified_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Timestamp__c</fullName>
    <description>Date the person move to disqualified status.</description>
    <inlineHelpText>Date the person move to disqualified status.</inlineHelpText>
    <label>OBS_Disqualified Timestamp</label>
    <type>Date</type>
</CustomField>