FLY wire David/force-app/main/default/objects/Lead/fields/Email_Domain_Capture__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Capture__c</fullName>
    <description>Pulls lead email domain from website capture field.</description>
    <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
    <inlineHelpText>Pulls lead email domain from website capture field.</inlineHelpText>
    <label>Email Domain Capture</label>
    <type>Text</type>
</CustomField>