FLY wire David/force-app/main/default/objects/Lead/fields/Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range__c</fullName>
    <label>Employee Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employees.1to4</fullName>
            </value>
            <value>
                <fullName>Employees.5to9</fullName>
            </value>
            <value>
                <fullName>Employees.10to19</fullName>
            </value>
            <value>
                <fullName>Employees.20to49</fullName>
            </value>
            <value>
                <fullName>Employees.50to99</fullName>
            </value>
            <value>
                <fullName>Employees.100to249</fullName>
            </value>
            <value>
                <fullName>Employees.250to499</fullName>
            </value>
            <value>
                <fullName>Employees.500to999</fullName>
            </value>
            <value>
                <fullName>Employees.1000to4999</fullName>
            </value>
            <value>
                <fullName>Employees.5000to9999</fullName>
            </value>
            <value>
                <fullName>Employees.10000plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>