FLY wire David/force-app/main/default/objects/Lead/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engagement_Status</valueSetName>
    </valueSet>
</CustomField>