FLY wire David/force-app/main/default/objects/Lead/fields/First_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date__c</fullName>
    <description>Capture Date of the first completed task related to this lead.</description>
    <label>OBS First Activity Date</label>
    <type>Date</type>
</CustomField>