FLY wire David/force-app/main/default/objects/Lead/fields/First_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Date_Time__c</fullName>
    <description>Capture Date of the first completed task related to this lead.</description>
    <inlineHelpText>Capture Date of the first completed task related to this lead.</inlineHelpText>
    <label>First Activity Date Time</label>
    <type>DateTime</type>
</CustomField>