FLY wire David/force-app/main/default/objects/Lead/fields/First_Activity_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Response_Time__c</fullName>
    <description>Auto Converts the difference between MQL Date Time and First Activity Date Time fields to days, hours, and minutes.</description>
    <formula>IF(
  First_Activity_Date_Time__c - MQL_Date_Time__c &gt; 0 ,
  TEXT( FLOOR( First_Activity_Date_Time__c - MQL_Date_Time__c ) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (First_Activity_Date_Time__c - MQL_Date_Time__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (First_Activity_Date_Time__c - MQL_Date_Time__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
    <inlineHelpText>Auto Converts the difference between MQL Date Time and First Activity Date Time fields to days, hours, and minutes.</inlineHelpText>
    <label>First Activity Response Time</label>
    <type>Text</type>
</CustomField>