FLY wire David/force-app/main/default/objects/Lead/fields/Founded_Year__c.field-meta.xml
<CustomField>
    <fullName>Founded_Year__c</fullName>
    <label>Founded Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>