FLY wire David/force-app/main/default/objects/Lead/fields/Integration_Partner__c.field-meta.xml
<CustomField>
    <fullName>Integration_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for Strategic Partner SAL-4483
Integration Partner for Commercial Deals</description>
    <inlineHelpText>Search for the Partner we will integrate with. If you can&apos;t find the Account notify your verticals Partner specialist.</inlineHelpText>
    <label>Integration Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Strategic Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Integration Partner)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>