FLY wire David/force-app/main/default/objects/Lead/fields/Invoicing_Platform__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Platform__c</fullName>
    <description>Which invoicing tool does the account use? Requested for B2B team. Data from Zoominfo.</description>
    <inlineHelpText>Invoicing Platform used by company.</inlineHelpText>
    <label>Invoicing Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Platform</valueSetName>
    </valueSet>
</CustomField>