FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Automation_Bypassed__c</fullName>
    <description>Checkbox used for flow automation bypass of validation rules. Delete this, it &apos;s a duplicate of Lead_Val_Bypass.</description>
    <formula>Lead_Bypass_DateTime__c  &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <inlineHelpText>Checkbox used for flow automation bypass of validation rules.</inlineHelpText>
    <label>OBS Automation Bypassed</label>
    <type>Checkbox</type>
</CustomField>