FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Bypass_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Lead_Bypass_DateTime__c</fullName>
    <description>Used for flow automation bypass of validation rules</description>
    <inlineHelpText>Used for flow automation bypass of validation rules</inlineHelpText>
    <label>Lead Bypass DateTime</label>
    <type>DateTime</type>
</CustomField>