FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Disqualified_Reason__c</fullName>
    <inlineHelpText>Enter the reason that the lead was disqualified.</inlineHelpText>
    <label>Lead Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Not Qualified</fullName>
            </value>
            <value>
                <fullName>Too Small</fullName>
                <label>Account Too Small</label>
            </value>
            <value>
                <fullName>Bad Email Address</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Data Missing</fullName>
            </value>
            <value>
                <fullName>Marked Inactive</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Trash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>