FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Industry__c.field-meta.xml
<CustomField>
    <fullName>Lead_Industry__c</fullName>
    <description>Enter the industry for the lead.</description>
    <inlineHelpText>Enter the industry for the lead.</inlineHelpText>
    <label>Lead Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>