FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Long_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Long_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Lead Long ID</label>
    <type>Text</type>
</CustomField>