FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <description>Used for lead round robin assignment.</description>
    <displayFormat>{0}</displayFormat>
    <inlineHelpText>Used for lead round robin assignment.</inlineHelpText>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>