FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Number_Intl_Students__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number_Intl_Students__c</fullName>
    <description>Lead field to capture the number of international students. To be used when marketing has a form w/ this data and the lead fills it out to request more info.</description>
    <inlineHelpText>This is filled in when marketing has a form filled out w/ this data enered to request more info.</inlineHelpText>
    <label>Lead Number Intl. Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>