FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For B2B Round Robin. Indicates that the sales owner of the lead has been assigned and removes the lead from the Round Robin owner assignment.</description>
    <inlineHelpText>For B2B Round Robin. Indicates that the sales owner of the lead has been assigned and removes the lead from the Round Robin owner assignment.</inlineHelpText>
    <label>Lead Owner Assigned</label>
    <type>Checkbox</type>
</CustomField>