FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_ID__c</fullName>
    <description>For reporting and uploads. Admin Only.</description>
    <formula>Owner:User.User_LongID__c</formula>
    <inlineHelpText>For reporting and uploads. Admin Only.</inlineHelpText>
    <label>Lead Owner ID</label>
    <type>Text</type>
</CustomField>