FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Person_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Person_Status__c</fullName>
    <description>Status of the person in the revenue lifecycle model.</description>
    <inlineHelpText>Status of the person in the revenue lifecycle model.</inlineHelpText>
    <label>Lead Person Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LeadContact_Status</valueSetName>
    </valueSet>
</CustomField>