FLY wire David/force-app/main/default/objects/Lead/fields/Lead_PO1__c.field-meta.xml
<CustomField>
    <fullName>Lead_PO1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead PO1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>