FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Industry__c</fullName>
    <description>Enter sub industry for the leads company.</description>
    <inlineHelpText>Enter sub industry for the leads company.</inlineHelpText>
    <label>Lead Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Industry</valueSetName>
    </valueSet>
</CustomField>