FLY wire David/force-app/main/default/objects/Lead/fields/Lead_Val_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Lead_Val_Bypass__c</fullName>
    <description>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Opp Bypass DateTime</description>
    <formula>Lead_Bypass_DateTime__c &gt; NOW() - 0.00009787037 /*Nine Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin field not for reporting. Used to bypass validation rules when Flows are triggered. Works with Opp Bypass DateTime</inlineHelpText>
    <label>Lead Val Bypass</label>
    <type>Checkbox</type>
</CustomField>