FLY wire David/force-app/main/default/objects/Lead/fields/mkto71_Acquisition_Program__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Program__c</fullName>
    <description>Populated via Marketo integration.</description>
    <inlineHelpText>Populated via Marketo integration.</inlineHelpText>
    <label>Acquisition Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>