FLY wire David/force-app/main/default/objects/Lead/fields/mkto71_Inferred_Country__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Inferred_Country__c</fullName>
    <description>Web inferred country of the person based on ISP from Marketo.</description>
    <inlineHelpText>Web inferred country of the person based on ISP from Marketo.</inlineHelpText>
    <label>Marketo Inferred Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>