FLY wire David/force-app/main/default/objects/Lead/fields/mkto_si__Last_Interesting_Moment_Desc__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
    <label>Last Interesting Moment Desc</label>
    <type>TextArea</type>
</CustomField>