FLY wire David/force-app/main/default/objects/Lead/fields/mkto_si__Sales_Insight__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Sales_Insight__c</fullName>
    <formula>HYPERLINK (&quot;/apex/mkto_si__Lead_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Insight</label>
    <type>Text</type>
</CustomField>