FLY wire David/force-app/main/default/objects/Lead/fields/mkto_si_Mkto_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>mkto_si_Mkto_Lead_Score__c</fullName>
    <description>MSI Field</description>
    <inlineHelpText>MSI Field</inlineHelpText>
    <label>Mkto Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>