FLY wire David/force-app/main/default/objects/Lead/fields/Most_Recent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign__c</fullName>
    <label>Most Recent Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>