FLY wire David/force-app/main/default/objects/Lead/fields/Most_Recent_Campaign_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign_Date_Time__c</fullName>
    <description>The date the Most Recent Campaign was updated on the person&apos;s record.</description>
    <inlineHelpText>The date the Most Recent Campaign was updated on the person&apos;s record.</inlineHelpText>
    <label>Most Recent Campaign Date Time</label>
    <type>DateTime</type>
</CustomField>