FLY wire David/force-app/main/default/objects/Lead/fields/Most_Recent_Campaign_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Campaign_Timestamp__c</fullName>
    <description>The date the Most Recent Campaign was updated on the person&apos;s record.</description>
    <inlineHelpText>The date the Most Recent Campaign was updated on the person&apos;s record.</inlineHelpText>
    <label>OBS_Most Recent Campaign Timestamp</label>
    <type>Date</type>
</CustomField>