FLY wire David/force-app/main/default/objects/Lead/fields/MQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date_Time__c</fullName>
    <description>Field to capture the date that a lead status changes to an MQL so we can capture the amount of time it takes to get to MQL.</description>
    <inlineHelpText>Field to capture the date that a lead status changes to an MQL so we can capture the amount of time it takes to get to MQL.</inlineHelpText>
    <label>MQL Date Time</label>
    <type>DateTime</type>
</CustomField>