FLY wire David/force-app/main/default/objects/Lead/fields/MQL_Last_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>MQL_Last_Campaign_Touch__c</fullName>
    <label>MQL Campaign Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>