FLY wire David/force-app/main/default/objects/Lead/fields/MQL_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MQL_Timestamp__c</fullName>
    <description>Field to capture the date that a lead status changes to an MQL so we can capture the amount of time it takes to get to MQL.</description>
    <label>OBS MQL Timestamp</label>
    <type>Date</type>
</CustomField>