FLY wire David/force-app/main/default/objects/Lead/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <length>6</length>
    <type>Text</type>
</CustomField>