FLY wire David/force-app/main/default/objects/Lead/fields/Nurture_Campaign_Touch__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Campaign_Touch__c</fullName>
    <label>Nurture Campaign Touch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>