FLY wire David/force-app/main/default/objects/Lead/fields/Nurture_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Date_Time__c</fullName>
    <description>Date the person move to nurture status.</description>
    <inlineHelpText>Date the person move to nurture status.</inlineHelpText>
    <label>Nurture Date Time</label>
    <type>DateTime</type>
</CustomField>