FLY wire David/force-app/main/default/objects/Lead/fields/Nurture_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Timestamp__c</fullName>
    <description>Date the person move to nurture status.</description>
    <inlineHelpText>Date the person move to nurture status.</inlineHelpText>
    <label>OBS_Nurture Timestamp</label>
    <type>Date</type>
</CustomField>