FLY wire David/force-app/main/default/objects/Lead/fields/OBSAccount_BDR__c.field-meta.xml
<CustomField>
    <fullName>OBSAccount_BDR__c</fullName>
    <description>Created for Marketo Sync because it can not read the BDR Owner lookup field.</description>
    <label>OBS_Account BDR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>