FLY wire David/force-app/main/default/objects/Lead/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>To distinguish between Client or potential client Contacts versus Partner (Player, partners, bank partner etc).</description>
    <inlineHelpText>Select No, if this person is associated with a Sales Account. If they are associated with a Partner  (Player, strategic partner, bank partner etc), choose Yes. 3/9/20 Update: No longer using this. Use Partner Type, instead.</inlineHelpText>
    <label>Partner?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>