FLY wire David/force-app/main/default/objects/Lead/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>enter the type of partner this person is associated with. To help teams differentiate and allow marketing to pull reports and email as necessary.</description>
    <label>OBS_Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking Partner</fullName>
            </value>
            <value>
                <fullName>Payment Service Provider</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>