FLY wire David/force-app/main/default/objects/Lead/fields/Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Type__c</fullName>
    <description>Identifies the type of person. Used in conjunction with person status.</description>
    <inlineHelpText>Identifies the type of person. Used in conjunction with person status.</inlineHelpText>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Person_Type</valueSetName>
    </valueSet>
</CustomField>