FLY wire David/force-app/main/default/objects/Lead/fields/Referred_by_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referred_by_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to link the partner account in SFDC to the lead for commissions, finance team etc.</description>
    <inlineHelpText>Used to link the partner account in SFDC to the lead for commissions, finance team etc.</inlineHelpText>
    <label>Referred by Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>