FLY wire David/force-app/main/default/objects/Lead/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <description>Email Address of the person referring this Lead/Contact. Used by Partner Team (Edu) to capture Email of the Partner Rep referring the lead. Entered via a Webform built for this purpose. May be used for other verticals in the future.SAL-3808</description>
    <inlineHelpText>Email Address of the person referring this Lead/Contact.</inlineHelpText>
    <label>Referrer Email</label>
    <type>Email</type>
</CustomField>