FLY wire David/force-app/main/default/objects/Lead/fields/Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Name__c</fullName>
    <description>Name of the person referring this Lead/Contact. Used by Partner Team (Edu) to capture Name of the Partner Rep referring the lead. Entered via a Webform built for this purpose. May be used for other verticals in the future.SAL-3808</description>
    <inlineHelpText>Name of the person referring this Lead/Contact</inlineHelpText>
    <label>Referrer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>